--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
-    "deploy:ghpages": "gh-pages -d .next"
+    "deploy:ghpages": "npm run build && touch out/.nojekyll  && gh-pages -d out  -t true"
   },
   "dependencies": {
     "@use-it/event-listener": "^0.1.5",
