--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "arrow-keys-react": "^1.0.6",
     "next": "9.5.3",
     "react": "16.13.1",
+    "react-awesome-lightbox": "^1.7.3",
     "react-dom": "16.13.1",
     "simple-react-lightbox": "^3.3.4-1"
   },
