--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   },
   "dependencies": {
     "@use-it/event-listener": "^0.1.5",
-    "arrow-keys-react": "^1.0.6",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-awesome-lightbox": "^1.7.3",
-    "react-dom": "16.13.1",
-    "simple-react-lightbox": "^3.3.4-1"
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
